# sup_def

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  err.txt  feature_ideas.cpp  ideas.md  meson.build  py-test  supdef  test_concepts.cc  test_coro
sup_def/: CMakeLists.txt
sup_def/cmake/: asserts.cmake  get_header_list.cmake  report_target_properties.cmake  test_utils.cmake
sup_def/common/: CMakeLists.txt  config.h  end_header.h  engine.cpp  engine.tpp  error_printer.cpp  exp_inst.cpp  parsed_char.cpp  parser.cpp  parser.tpp  pragmas.cpp  pragmas.tpp  start_header.h  sup_def.hpp  supdefcommon.cmake  thread_pool.cpp
sup_def/common/fs-watch/: fs-watch.cmake  fs-watch.cpp  fs-watch.hpp
sup_def/common/sigmanager/: sigmanager.cmake  sigmanager.cpp  sigmanager.cpp.old  sigmanager.hpp  sigmanager.hpp.old
sup_def/common/threadkiller/: threadkiller.cmake  threadkiller.hpp
sup_def/common/unistreams/: .unistreams.hpp.old  types.hpp  unistreams.cmake  unistreams.hpp
sup_def/common/unistreams/impl/: .file.ipp.old  char_traits.ipp  detail_optional.ipp  detail_tuple.ipp  file.ipp  mmaped_file.ipp  string.ipp  string_conversions.ipp  string_conversions.ipp.old  utf_chars.ipp
sup_def/common/unistreams/impl/compiled/: CMakeLists.txt  gen_ucd  gen_ucd.py  main.c  test_bindata  test_hrdata  unidata.cpp.in
sup_def/common/unistreams/impl/string_conversions/: char16_char32.ipp  char16_utf16.ipp  char16_utf32.ipp  char16_utf8.ipp  char32_utf16.ipp  char32_utf32.ipp  char32_utf8.ipp  char8_char16.ipp  char8_char32.ipp  char8_utf16.ipp  char8_utf32.ipp  char8_utf8.ipp  char_char16.ipp  char_char32.ipp  char_char8.ipp  char_utf16.ipp  char_utf32.ipp  char_utf8.ipp  char_wchar.ipp  gen  utf16_utf32.ipp  utf8_utf16.ipp  utf8_utf32.ipp  wchar_char16.ipp  wchar_char32.ipp  wchar_char8.ipp  wchar_utf16.ipp  wchar_utf32.ipp  wchar_utf8.ipp
sup_def/common/unistreams/static_test/: detail_optional.ipp  detail_tuple.ipp  utf_chars.ipp
sup_def/common/util/: concepts.hpp  constructors.cpp  convert_old_impl.ipp  destructors.cpp  engine.hpp  errors.cpp  exception.hpp  fwd_decls.hpp  platform.hpp  static_allocator.cpp  util.cpp  util.hpp
sup_def/tests/: CMakeLists.txt  test_common1.cpp  test_external1.cpp  tests.h
sup_def/tests/common/: convert_macro.ipp  is.ipp  pragloc_comparator.ipp  tests.hpp  thread_pool.ipp  thread_safe_queue.ipp  unistreams_std_basic_string.ipp  unistreams_string.ipp
